			* rug plots
			* allow to create a data spreadsheet with the positions and values of the histogram bins
		* Box Plot
			* rug plots
			* allow to create a data spreadsheet with the box plot metrics (quartiles, median, etc.)
			* symbols for whisker end points
			* allow to modify box properties (color, etc.) for every data set independently of each other
	* [spreadsheet]
		* use a different icon for calculated columns, also show the definition of the formula and parameters in the tooltip text in the project explorer
		* Heatmap formatting for categorical data in text columns
		* when generating random numbers, allow to specify the seed number
		* show column statistics also for text columns
		* Dropping and masking of values also for text and datetime columns
		* Data sampling (random and periodic methods)
		* Data 'flattening' - convert pivoted data to column base format
		* Column statistics (size, mean, stddev, etc.) are available in the function dialog
		* Function values dialog supports accessing arbitrary cells of columns with cell(f(index), g(column,..)) and other moving functions
	* [matrix]
		* Zooming in the image view
	* [import]
		* Import data from Excel .xlsx files using QXlsx library
		* HDF5: support VLEN data import
		* Live data: support multiple values via TCP
	* [export]
		* Use the current working project directory, if available, as the default export path
	* [analysis]
		* guess start values of fit parameter for polynomial models by linear regression
		* allow to create a spreadsheet with the data steming from the result of the computation
		* implement fourier filtering for datetimes
	* [general]
		* add settings option for GUM compliant terms

Performance improvements:
	* reduce the memory consumption during the spreadsheet export to Sqlite
	* reduce the memory consumption when importing from a database table into the spreadsheet
	* faster import of files with a big number of columns